--- a/aulas/frontend/public/index.html
+++ b/aulas/frontend/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="author" content="Bruno Carvalho Feitosa" />
+    <meta name="description" content="Aplicativo desenvolvido em Node.js, React.js, React Native e SQLite. Seu propósito é cadastrar ONG's, Pessoas e Casos a fim de ajudar pessoas, animais ou instituições" />
+    <meta name="keywords" content="Aplicativo, Node.js, React.js, React Native, SQLite, Cadastrar, ONG's, Pessoas, Instituições, Casos, Ajudar" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Be The Hero</title>
+    <link rel="icon" href="%PUBLIC_URL%/fav.png" />
+    <title>Be The Hero - Seja o herói</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
