feat(/frontend) Adding new favicon and meta tags to index | Html

--- a/aulas/frontend/public/index.html
+++ b/aulas/frontend/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="author" content="Bruno Carvalho Feitosa" />
-    <meta name="description" content="Aplicativo desenvolvido em Node.js, React.js, React Native e SQLite. Seu propósito é cadastrar ONG's, Pessoas e Casos a fim de ajudar pessoas, animais ou instituições" />
-    <meta name="keywords" content="Aplicativo, Node.js, React.js, React Native, SQLite, Cadastrar, ONG's, Pessoas, Instituições, Casos, Ajudar" />
+    <meta name="description" content="Aplicativo desenvolvido em Node.js, React.js, React Native e SQLite. Seu propósito é cadastrar ONG's, Pessoas e Casos a fim de ajudar pessoas, animais ou instituições com valores financeiros" />
+    <meta name="keywords" content="Aplicativo, Node.js, React.js, React Native, SQLite, Cadastrar, ONG's, Pessoas, Instituições, Casos, Ajudar, Valores Financeiros" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" href="%PUBLIC_URL%/fav.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/fav.png" />
     <title>Be The Hero - Seja o herói</title>
   </head>
   <body>
