--- a/aulas/frontend/public/index.html
+++ b/aulas/frontend/public/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/fav.png" />
-    <title>Be The Hero - Seja o herói</title>
+    <title>Be The Hero - Seja o herói da vez</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
